# agentsos

./: .env.example  .gitignore  .vercelignore  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  README.md  config.yaml  package-lock.json  package.json  tsconfig.json  vitest.e2e.config.ts
.github/workflows/: ci.yml  vercel-deploy.yml
agents/ai-engineer/: agent.toml
agents/analyst/: agent.toml
agents/app-store-optimizer/: agent.toml
agents/architect/: agent.toml
agents/assistant/: agent.toml
agents/brand-guardian/: agent.toml
agents/code-reviewer/: agent.toml
agents/coder/: agent.toml
agents/content-creator/: agent.toml
agents/customer-support/: agent.toml
agents/data-scientist/: agent.toml
agents/debugger/: agent.toml
agents/devops-lead/: agent.toml
agents/doc-writer/: agent.toml
agents/email-assistant/: agent.toml
agents/evidence-collector/: agent.toml
agents/feedback-synthesizer/: agent.toml
agents/growth-hacker/: agent.toml
agents/health-tracker/: agent.toml
agents/hello-world/: agent.toml
agents/home-automation/: agent.toml
agents/image-prompt-engineer/: agent.toml
agents/legal-assistant/: agent.toml
agents/meeting-assistant/: agent.toml
agents/mobile-builder/: agent.toml
agents/ops/: agent.toml
agents/orchestrator/: agent.toml
agents/performance-benchmarker/: agent.toml
agents/personal-finance/: agent.toml
agents/planner/: agent.toml
agents/rapid-prototyper/: agent.toml
agents/reality-checker/: agent.toml
agents/recruiter/: agent.toml
agents/researcher/: agent.toml
agents/sales-assistant/: agent.toml
agents/security-auditor/: agent.toml
agents/social-media/: agent.toml
agents/sprint-prioritizer/: agent.toml
agents/test-engineer/: agent.toml
agents/translator/: agent.toml
agents/travel-planner/: agent.toml
agents/trend-researcher/: agent.toml
agents/tutor/: agent.toml
agents/ux-architect/: agent.toml
agents/writer/: agent.toml
crates/agent-core/: Cargo.toml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/llm-router/: Cargo.toml
crates/llm-router/src/: main.rs
crates/memory/: Cargo.toml
crates/memory/src/: main.rs
crates/security/: Cargo.toml
crates/security/src/: docker_sandbox.rs  main.rs  signing.rs  taint.rs  tool_policy.rs
crates/tui/: Cargo.toml
crates/tui/src/: main.rs
crates/wasm-sandbox/: Cargo.toml
crates/wasm-sandbox/src/: main.rs
e2e/: agentos.e2e.test.ts  full-stack.test.ts
examples/: crew-blog-writer.ts  crew-blog-writer.yaml  crew-startup-analyzer.ts  crew-swarm-debate.ts  run-crew-demo.ts
hands/browser/: HAND.toml
identity/: AGENTS.md  BOOTSTRAP.mdx  CLAUDE.md  CONTRIBUTING.md  MEMORY.mdx  README.md  SOUL.mdx  TOOLS.mdx  USER.mdx
integrations/: aws.toml  azure-mcp.toml  bitbucket.toml  brave-search.toml  discord-mcp.toml  dropbox.toml  elasticsearch.toml  exa-search.toml  gcp-mcp.toml  github.toml  gitlab.toml  gmail.toml  google-calendar.toml  google-drive.toml  jira.toml  linear.toml  mongodb.toml  notion.toml  postgresql.toml  redis.toml  sentry.toml  slack.toml  sqlite-mcp.toml  teams-mcp.toml  todoist.toml
plugin/: .mcp.json
src/: a2a-cards.ts  a2a.ts  agent-core.ts  api.ts  approval-tiers.ts  approval.ts  artifact-dag.ts  browser.ts  code-agent.ts  context-cache.ts  context-manager.ts  context-monitor.ts  coordination.ts  cost-tracker.ts  cron.ts  dashboard.ts  eval.ts  evolve.ts  feedback.ts  hand-runner.ts  hashline.ts  hooks.ts  index.ts  knowledge-graph.ts  llm-router.ts  loop-guard.ts  lsp-tools.ts  mcp-client.ts  memory-reflection.ts  memory.ts  migration.ts  model-catalog.ts  orchestrator.ts  rate-limiter.ts  recovery.ts  security-headers.ts  security-map.ts  security-zeroize.ts  security.ts  session-lifecycle.ts  (+14 more)
tests/: agent_toml_test.rs
website/: .gitignore  App.tsx  index.html  index.tsx  package-lock.json  package.json  styles.css  tsconfig.json  vite.config.ts
workers/a2a/: Cargo.toml  iii.worker.yaml
workers/a2a-cards/: Cargo.toml  iii.worker.yaml
workers/a2a-cards/src/: main.rs  types.rs
workers/a2a/src/: main.rs  types.rs
workers/bridge/: Cargo.toml  iii.worker.yaml
workers/bridge/src/: main.rs  types.rs
workers/browser/: Cargo.toml  iii.worker.yaml
workers/browser/src/: main.rs  types.rs
workers/channel-discord/: Cargo.toml  iii.worker.yaml
workers/channel-discord/src/: main.rs
workers/channel-email/: Cargo.toml  iii.worker.yaml
workers/channel-email/src/: main.rs
workers/channel-teams/: Cargo.toml  iii.worker.yaml
workers/channel-teams/src/: main.rs
workers/channel-twitch/: Cargo.toml  iii.worker.yaml
workers/channel-twitch/src/: main.rs
workers/code-agent/: Cargo.toml  iii.worker.yaml
workers/code-agent/src/: main.rs
workers/context-cache/: Cargo.toml  iii.worker.yaml
workers/context-cache/src/: main.rs  types.rs
workers/context-manager/: Cargo.toml  iii.worker.yaml
workers/context-manager/src/: main.rs  types.rs
workers/coordination/: Cargo.toml  iii.worker.yaml
workers/coordination/src/: main.rs  types.rs
workers/directive/: Cargo.toml  iii.worker.yaml
workers/directive/src/: main.rs  types.rs
workers/hashline/: Cargo.toml
workers/hashline/src/: main.rs
workers/ledger/: Cargo.toml  iii.worker.yaml
workers/ledger/src/: main.rs  types.rs
workers/lsp-tools/: Cargo.toml  iii.worker.yaml
workers/lsp-tools/src/: main.rs
workers/realm/: Cargo.toml  iii.worker.yaml
workers/realm/src/: main.rs  types.rs
workers/security-headers/: Cargo.toml  iii.worker.yaml
workers/security-headers/src/: main.rs
workers/security-map/: Cargo.toml  iii.worker.yaml
workers/security-map/src/: main.rs
workers/security-zeroize/: Cargo.toml  iii.worker.yaml
workers/security-zeroize/src/: main.rs
workers/session-lifecycle/: Cargo.toml  iii.worker.yaml
workers/session-lifecycle/src/: main.rs  types.rs
workers/skill-security/: Cargo.toml  iii.worker.yaml
workers/skill-security/src/: main.rs
workers/skillkit-bridge/: Cargo.toml  iii.worker.yaml
workers/skillkit-bridge/src/: main.rs
workflows/: feature-build.yaml  incident-response.yaml  mvp-sprint.yaml
(+293 files in other folders)
