[workspace]
resolver = "2"
members = [
    "crates/cli",
    "crates/tui",
    "workers/agent-core",
    "workers/bridge",
    "workers/council",
    "workers/directive",
    "workers/hierarchy",
    "workers/ledger",
    "workers/llm-router",
    "workers/memory",
    "workers/mission",
    "workers/pulse",
    "workers/realm",
    "workers/security",
    "workers/wasm-sandbox",
]

[workspace.package]
version = "0.0.1"
edition = "2024"
license = "Apache-2.0"

[workspace.dependencies]
iii-sdk = "=0.11.4-next.4"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
uuid = { version = "1", features = ["v4"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = { version = "0.4", features = ["serde"] }
dashmap = "6"

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = 3
