[workspace]
resolver = "2"
members = [
    "crates/cli",
    "crates/tui",
    "workers/a2a",
    "workers/a2a-cards",
    "workers/agent-core",
    "workers/approval",
    "workers/approval-tiers",
    "workers/bridge",
    "workers/channel-email",
    "workers/channel-slack",
    "workers/channel-teams",
    "workers/channel-webex",
    "workers/channel-whatsapp",
    "workers/coordination",
    "workers/council",
    "workers/cron",
    "workers/directive",
    "workers/eval",
    "workers/evolve",
    "workers/feedback",
    "workers/hand-runner",
    "workers/hashline",
    "workers/hierarchy",
    "workers/hooks",
    "workers/ledger",
    "workers/llm-router",
    "workers/mcp-client",
    "workers/loop-guard",
    "workers/lsp-tools",
    "workers/memory",
    "workers/mission",
    "workers/orchestrator",
    "workers/pulse",
    "workers/rate-limiter",
    "workers/realm",
    "workers/security",
    "workers/skillkit-bridge",
    "workers/telemetry",
    "workers/vault",
    "workers/swarm",
    "workers/task-decomposer",
    "workers/wasm-sandbox",
    "workers/workflow",
]

[workspace.package]
version = "0.0.1"
edition = "2024"
license = "Apache-2.0"

[workspace.dependencies]
iii-sdk = "=0.11.4-next.4"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
uuid = { version = "1", features = ["v4"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = { version = "0.4", features = ["serde"] }
dashmap = "6"

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = 3
