[package]
name = "agentsos-llm-router"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "agentsos-llm-router"
path = "src/main.rs"

[dependencies]
iii-sdk.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
dashmap = "6"
