[package]
name = "agentsos-security"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
iii-sdk.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
hmac.workspace = true
uuid.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
regex = "1"
ed25519-dalek = "2"
hex = "0.4"
dashmap = "6"
