[package]
name = "agentos-tui"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "agentos-tui"
path = "src/main.rs"

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
ratatui = "0.29"
crossterm = "0.28"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
