[package]
name = "agentos-wasm-sandbox"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
iii-sdk.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
wasmtime = "41"
dashmap = "6"
