[package]
name = "agentos-bridge"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "agentos-bridge"
path = "src/main.rs"

[dependencies]
iii-sdk.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
dashmap.workspace = true
