[package]
name = "agentos-channel-discord"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "agentos-channel-discord"
path = "src/main.rs"

[dependencies]
iii-sdk.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
