[package]
name = "agentos-code-agent"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "agentos-code-agent"
path = "src/main.rs"

[dependencies]
iii-sdk.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
regex = "1"
rquickjs = { version = "0.9", features = ["macro", "futures", "loader"] }
