[package]
name = "agentos-lsp-tools"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "agentos-lsp-tools"
path = "src/main.rs"

[dependencies]
iii-sdk.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
regex = "1"
