[package]
name = "agentos-security-headers"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "agentos-security-headers"
path = "src/main.rs"

[dependencies]
iii-sdk.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
reqwest = { version = "0.12", features = ["rustls-tls"], default-features = false }
