[package]
name = "agentos-security-map"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "agentos-security-map"
path = "src/main.rs"

[dependencies]
iii-sdk.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
hmac.workspace = true
hex.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
ed25519-dalek = "2"
rand = "0.8"
subtle = "2"
