[package]
name = "agentos-skill-security"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "agentos-skill-security"
path = "src/main.rs"

[dependencies]
iii-sdk.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
regex = "1"
ed25519-dalek = { version = "2", features = ["pkcs8"] }
base64 = "0.22"
spki = "0.7"
